--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.19
   google_fonts: ^4.0.4
+  get: ^4.6.5
+  liquid_swipe: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -78,9 +80,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/monogram.png
-    - assets/images/pc-type.png
-    - assets/images/yeallow-shape.png
+    - assets/images/
+    - assets/images/splash_images/
+    - assets/images/on_boarding_images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
