--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,14 +55,14 @@ dev_dependencies:
 flutter_native_splash:
   color: "#f7f6f1"
   color_dark: "#272727"
-  image: assets/images/barger.png
-  image_dark: assets/images/barger.png
+  image: assets/images/logo.png
+  image_dark: assets/images/logo.png
 
-#  android_12:
-#    image: assets/images/barger.png
-#    icon_backdround_color: "#f7f6f1"
-#    image_dark: assets/images/barger.png
-#    icon_background_color_dark: "#272727"
+  android_12:
+    image: assets/images/logo.png
+    icon_backdround_color: "#f7f6f1"
+    image_dark: assets/images/logo.png
+    icon_background_color_dark: "#272727"
 
 
 
@@ -82,6 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/logo/
     - assets/images/splash_images/
     - assets/images/on_boarding_images/
 
