--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - assets/logo/
     - assets/images/splash_images/
     - assets/images/on_boarding_images/
+    - assets/images/forget_password/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
