--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:991883682804:ios:3dee7747fd507832248fa1",
-  "FIREBASE_PROJECT_ID": "sn-global-4c941",
-  "GCM_SENDER_ID": "991883682804"
+  "GOOGLE_APP_ID": "1:301311364531:ios:de84fd427cf147cbf00fc6",
+  "FIREBASE_PROJECT_ID": "woodbanc-abaaf",
+  "GCM_SENDER_ID": "301311364531"
 }
