--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   flutter_native_splash: ^2.2.19
   google_fonts: ^4.0.4
   get: ^4.6.5
@@ -43,6 +43,7 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   firebase_core: ^2.13.1
   firebase_auth: ^4.6.2
+  line_awesome_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +87,7 @@ flutter:
   assets:
     - assets/logo/
     - assets/images/
+    - assets/profile/
     - assets/images/dashboard/
     - assets/images/splash_images/
     - assets/images/forget_password/
